# Sliding_Mode_Controller

./: README.md
core/: CMakeLists.txt
src/core/: smc_calculator.hpp
src/example/: gimbal_model.hpp  gimbal_observer.cpp
